# x64-browser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
electron/: tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BrowserView.tsx  NavigationBar.tsx  NewTab.tsx  Tab.tsx  TabBar.tsx  TitleBar.tsx
src/stores/: useBookmarkStore.ts  useDownloadStore.ts  useHistoryStore.ts  useSettingsStore.ts  useTabStore.ts
src/types/: index.ts
