[package]
name = "x64-browser"
version = "0.1.0"
description = "X64 Browser - A high-performance Mac-optimized web browser"
authors = ["X64 Browser Team"]
edition = "2021"

[lib]
name = "x64_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
